# chess_engine

./: .gitignore  Cargo.toml
crates/bitboard_wizard/: Cargo.toml
src/: board.rs  board_repr.rs  engine.rs  hashers.rs  lib.rs  magic_bitboards.rs  main.rs  moving.rs  perft.rs  perft_data.rs  piece.rs  position.rs  pseudo_moving.rs  search.rs  search_data.rs  search_masks.rs  uci.rs  utils.rs  zobrist.rs
src/engine/: bot.rs  constants.rs  evaluate.rs  incremental_rating.rs  minimax.rs  mod.rs  negamax.rs  play.rs  searcher.rs  transposition_table.rs
src/ffi/: mod.rs  struct_reprs.rs
src/uci/: command.rs  session.rs  stream.rs
src/util/: mod.rs  pseudo_moving.rs
