[package]
name = "chess_engine"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-C", "target-cpu=x86-64-v3"]

[features]
default = []
ffi = []
perft = []

[dependencies]
array-init = "2.1.0"
arrayvec = "0.7.6"
nohash-hasher = "0.2.0"
owo-colors = "4.2.1"
rand = "0.9.0"
rayon = "1.11.0"

[profile.release]
debug = "line-tables-only"
lto = "fat"


[profile.dev]
opt-level = 1

[profile.dev.dependencies."*"]
opt-level = 3
